--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
   font-size: 16px;
   margin: 0;
   padding: 0;
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 h1,
 h2,
@@ -60,12 +60,14 @@ a {
   display: block;
   color: currentColor;
   text-decoration: none;
+  cursor: pointer;
 }
 
 button {
   font-family: inherit;
-  color: currentColor;
+  cursor: pointer;
   border: none;
+  background-color: inherit;
 }
 
 input {
